Se agregaron imágenes y se termina el footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <nav class="navegacion">
           <ul>
             <li><a href="#inicio">Home</a></li>
-            <li><a href="#sobre-mi">Equipo Médico</a></li>
+            <li><a href="#equipo-medico">Equipo Médico</a></li>
+            <li><a href="#servicios">Servicios</a></li>
             <li><a href="#contacto">Contacto</a></li>
           </ul>
         </nav>
@@ -49,16 +50,21 @@
         <aside>hola</aside>
       </div>
 
-      <section id="sobre-mi">
+      <section id="nuestro-equipo ">
         <h2>Sobre nuestro equipo</h2>
-        <p>Aquí puedes poner información sobre ti.</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas velit
+          odio eum? Sint ipsa consequatur, repudiandae nemo vel officia
+          consectetur, pariatur, dignissimos totam obcaecati molestias magni!
+          Eos sit illum enim..
+        </p>
       </section>
 
-      <section>
+      <section id="servicios">
         <h2>Servicios Médicos del Hospital del Corazón</h2>
 
         <div class="servicios">
-          <img src="URL_DEL_ICONO" alt="Ícono de consulta" />
+          <img src="img/servicios/cardiologia.png" alt="Ícono de consulta" />
           <h3>Consultas Cardiológicas</h3>
           <p>
             Ofrecemos consultas especializadas con cardiólogos experimentados
@@ -68,7 +74,10 @@
         </div>
 
         <div class="servicios">
-          <img src="URL_DEL_ICONO" alt="Ícono de urgencias" />
+          <img
+            src="img/servicios/medicina-urgencia.jpg"
+            alt="Ícono de urgencias"
+          />
           <h3>Urgencias Cardiovasculares</h3>
           <p>
             Nuestro servicio de urgencias está disponible las 24 horas,
@@ -78,7 +87,10 @@
         </div>
 
         <div class="servicios">
-          <img src="URL_DEL_ICONO" alt="Ícono de especialidades" />
+          <img
+            src="img/servicios/servicio-cardiologia.jpg"
+            alt="Ícono de especialidades"
+          />
           <h3>Especialidades en Cardiología</h3>
           <p>
             Contamos con diversas especialidades, incluyendo
@@ -130,8 +142,40 @@
       </section>
     </main>
 
-    <footer>
-      <p>&copy; 2024 Tu Nombre. Todos los derechos reservados.</p>
+    <footer id="footer">
+      <div class="footer-content">
+        <h3>Hospital del Corazón</h3>
+        <ul class="enlaces">
+          <li><a href="#servicios">Servicios</a></li>
+          <li><a href="#testimonios">Testimonios</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+          <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
+        </ul>
+
+        <div class="contact-info">
+          <h4>Contacto</h4>
+          <p>Teléfono: (123) 456-7890</p>
+          <p>Email: contacto@hospitalcorazon.com</p>
+          <p>Dirección: Calle Ejemplo 123, Ciudad, País</p>
+        </div>
+
+        <div class="social-media">
+          <h4>Síguenos</h4>
+          <a href="https://www.facebook.com/hospitalcorazon" target="_blank"
+            >Facebook</a
+          >
+          <a href="https://www.twitter.com/hospitalcorazon" target="_blank"
+            >Twitter</a
+          >
+          <a href="https://www.instagram.com/hospitalcorazon" target="_blank"
+            >Instagram</a
+          >
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p>&copy; 2024 Hospital del Corazón. Todos los derechos reservados.</p>
+      </div>
     </footer>
   </body>
 </html>
