--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2024 Hospital del Corazón. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Hospital del Corazón - Todos los derechos reservados.</p>
       </div>
     </footer>
   </body>
