--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,15 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <title>Contacto</title>
   </head>
   <body>
     <header id="header">
       <div class="header-interior">
-        <img src="../assets/img/logo.png" alt="Logo del Hospital" id="logo" />
-        <h1 class="titulo">Hospital Valle de Salud</h1>
+        <a href="/"
+          ><img
+            src="../assets/img/logo.png"
+            alt="Logo del Hospital"
+            id="logo"
+          />
+          <h1 class="titulo">Hospital del Corazón</h1></a
+        >
         <nav class="navegacion">
           <ul>
             <li><a href="/">Home</a></li>
@@ -26,41 +38,43 @@
       </div>
     </header>
 
-    <main id="contacto">
-      <div class="title">
-        <h1>Contacto</h1>
-      </div>
+    <div id="contacto">
+      <div class="container">
+        <div class="title">
+          <h1>Contacto</h1>
+        </div>
 
-      <div class="infor">
-        <form>
-          <label for="nombre">Nombre:</label>
-          <input type="text" id="nombre" name="nombre" required />
+        <div class="infor">
+          <form>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required />
 
-          <label for="email">Correo Electrónico:</label>
-          <input type="email" id="email" name="email" required />
+            <label for="email">Correo Electrónico:</label>
+            <input type="email" id="email" name="email" required />
 
-          <label for="asunto">Asunto:</label>
-          <input type="text" id="asunto" name="asunto" required />
+            <label for="asunto">Asunto:</label>
+            <input type="text" id="asunto" name="asunto" required />
 
-          <label for="mensaje">Mensaje:</label>
-          <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
 
-          <button type="submit">Enviar</button>
-        </form>
+            <button type="submit">Enviar</button>
+          </form>
 
-        <div id="map">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13300.9446211407!2d-70.78494889276902!3d-33.547240090420054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662dd01c5f41133%3A0xfe5c069201f1b2fb!2sEl%20Abrazo%2C%209280396%20Maip%C3%BA%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1729558639856!5m2!1ses-419!2scl"
-            width="600"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+          <div id="map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13300.944451875108!2d-70.77576473241136!3d-33.54724119005414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662dd01c5f41133%3A0xfe5c069201f1b2fb!2sEl%20Abrazo%2C%209280396%20Maip%C3%BA%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1729646917734!5m2!1ses-419!2scl"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
         </div>
       </div>
-    </main>
+    </div>
 
     <footer id="footer">
       <div class="footer-content">
@@ -89,10 +103,11 @@
             >Instagram</a
           >
         </div>
-      </div>
-
-      <div class="footer-bottom">
-        <p>&copy; 2024 Hospital del Corazón - Todos los derechos reservados.</p>
+        <div class="footer-bottom">
+          <p>
+            &copy; 2024 Hospital del Corazón - Todos los derechos reservados.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
