--- a/pages/equipo-medico.html
+++ b/pages/equipo-medico.html
@@ -3,19 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
     <title>Equipo Médico</title>
   </head>
   <body>
     <header id="header">
       <div class="header-interior">
-        <img src="../assets/img/logo.png" alt="Logo del Hospital" id="logo" />
-        <h1 class="titulo">Hospital Valle de Salud</h1>
+        <a href="/"
+          ><img
+            src="../assets/img/logo.png"
+            alt="Logo del Hospital"
+            id="logo"
+          />
+          <h1 class="titulo">Hospital del Corazón</h1></a
+        >
         <nav class="navegacion">
           <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/pages/equipo-medico.html">Nuestro Equipo Médico</a></li>
+            <li>
+              <a href="/pages/equipo-medico.html">Nuestro Equipo Médico</a>
+            </li>
             <li><a href="/pages/contacto.html">Contacto</a></li>
           </ul>
         </nav>
@@ -23,13 +37,11 @@
         <button>Reservar cita</button>
       </div>
     </header>
-   
-    <main id="main">
-      <h1>Equipo Médico</h1>
 
-      <div class="bienvenida">
-        <article>
-          <h2>Presentación</h2>
+    <div id="equipo-medico">
+      <div class="container">
+        <h1>Equipo Médico</h1>
+        <section>
           <p>
             El Hospital del Corazón se compromete a ofrecer atención médica de
             excelencia, con un equipo de especialistas dedicados a proporcionar
@@ -37,67 +49,77 @@
             bienestar de nuestros pacientes, respaldados por tecnología de
             vanguardia y un enfoque integral en la salud cardiovascular.
           </p>
-        </article>
+        </section>
+        <div class="card">
+          <img
+            src="../assets/img/equipo-medico/equipo-1.jpg"
+            alt="Dr. Juan Pérez"
+          />
+          <div class="info">
+            <h3>Dr. Juan Pérez</h3>
+            <p><strong>Especialidad:</strong> Cardiología</p>
+            <p>
+              Con más de 15 años de experiencia en el diagnóstico y tratamiento
+              de enfermedades cardíacas, el Dr. Pérez se especializa en
+              intervenciones mínimamente invasivas y es un defensor del enfoque
+              preventivo en la salud cardiovascular.
+            </p>
+          </div>
+        </div>
 
-        <aside>hola</aside>
-      </div>
+        <div class="card">
+          <img
+            src="../assets/img/equipo-medico/equipo-2.jpg"
+            alt="Dra. María López"
+          />
+          <div class="info">
+            <h3>Dra. María López</h3>
+            <p><strong>Especialidad:</strong> Cirugía Cardiovascular</p>
+            <p>
+              La Dra. López es experta en procedimientos quirúrgicos complejos y
+              cuenta con una trayectoria destacada en el tratamiento de
+              condiciones cardíacas críticas. Su enfoque compasivo y meticuloso
+              ha transformado la vida de muchos pacientes.
+            </p>
+          </div>
+        </div>
 
-      <div class="card">
-        <img src="URL_de_la_foto_de_Juan_Perez" alt="Dr. Juan Pérez" />
-        <div class="info">
-          <h3>Dr. Juan Pérez</h3>
-          <p><strong>Especialidad:</strong> Cardiología</p>
-          <p>
-            Con más de 15 años de experiencia en el diagnóstico y tratamiento de
-            enfermedades cardíacas, el Dr. Pérez se especializa en
-            intervenciones mínimamente invasivas y es un defensor del enfoque
-            preventivo en la salud cardiovascular.
-          </p>
+        <div class="card">
+          <img
+            src="../assets/img/equipo-medico/equipo-3.jpg"
+            alt="Dr. Carlos Sánchez"
+          />
+          <div class="info">
+            <h3>Dra. Ana Torres</h3>
+            <p><strong>Especialidad:</strong> Medicina Interna</p>
+            <p>
+              La Dra. Torres combina su experiencia en medicina interna con un
+              enfoque integral hacia la salud cardiovascular, promoviendo
+              estilos de vida saludables y un tratamiento holístico para sus
+              pacientes.
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img
+            src="../assets/img/equipo-medico/equipo-4.jpg"
+            alt="Dra. Ana Torres"
+          />
+          <div class="info">
+            <h3>Dr. Carlos Sánchez</h3>
+            <p><strong>Especialidad:</strong> Electrofisiología</p>
+            <p>
+              Con una sólida formación en electrofisiología, el Dr. Sánchez se
+              especializa en el manejo de arritmias y el uso de tecnologías
+              avanzadas para mejorar la salud cardíaca de sus pacientes. Su
+              pasión por la investigación lo mantiene a la vanguardia de las
+              innovaciones en su campo.
+            </p>
+          </div>
         </div>
       </div>
-
-      <div class="card">
-        <img src="URL_de_la_foto_de_Maria_Lopez" alt="Dra. María López" />
-        <div class="info">
-          <h3>Dra. María López</h3>
-          <p><strong>Especialidad:</strong> Cirugía Cardiovascular</p>
-          <p>
-            La Dra. López es experta en procedimientos quirúrgicos complejos y
-            cuenta con una trayectoria destacada en el tratamiento de
-            condiciones cardíacas críticas. Su enfoque compasivo y meticuloso ha
-            transformado la vida de muchos pacientes.
-          </p>
-        </div>
-      </div>
-
-      <div class="card">
-        <img src="URL_de_la_foto_de_Carlos_Sanchez" alt="Dr. Carlos Sánchez" />
-        <div class="info">
-          <h3>Dr. Carlos Sánchez</h3>
-          <p><strong>Especialidad:</strong> Electrofisiología</p>
-          <p>
-            Con una sólida formación en electrofisiología, el Dr. Sánchez se
-            especializa en el manejo de arritmias y el uso de tecnologías
-            avanzadas para mejorar la salud cardíaca de sus pacientes. Su pasión
-            por la investigación lo mantiene a la vanguardia de las innovaciones
-            en su campo.
-          </p>
-        </div>
-      </div>
-
-      <div class="card">
-        <img src="URL_de_la_foto_de_Ana_Torres" alt="Dra. Ana Torres" />
-        <div class="info">
-          <h3>Dra. Ana Torres</h3>
-          <p><strong>Especialidad:</strong> Medicina Interna</p>
-          <p>
-            La Dra. Torres combina su experiencia en medicina interna con un
-            enfoque integral hacia la salud cardiovascular, promoviendo estilos
-            de vida saludables y un tratamiento holístico para sus pacientes.
-          </p>
-        </div>
-      </div>
-    </main>
+    </div>
 
     <footer id="footer">
       <div class="footer-content">
