integración con SASS

--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- <link rel="stylesheet" href="css/styles.css" /> -->
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header id="header">
-      <div class="header-interior">
-        <img src="img/logo.png" alt="Logo del Hospital" id="logo" />
-        <h1 class="titulo">Hospital Valle de Salud</h1>
+    <header>
+      <div class="header__interior">
+        <div class="header__logo">
+          <a href="/">
+            <img src="img/logo.png" alt="Logo del Hospital" id="logo" />
+            <h1>Hospital del Corazón</h1></a
+          >
+        </div>
         <nav class="navegacion">
-          <ul>
+          <ul class="navegacion__enlaces">
             <li><a href="#inicio">Home</a></li>
             <li><a href="#sobre-mi">Equipo Médico</a></li>
             <li><a href="#contacto">Contacto</a></li>
@@ -49,7 +53,7 @@
         <aside>hola</aside>
       </div>
 
-      <section id="sobre-mi">
+      <section>
         <h2>Sobre nuestro equipo</h2>
         <p>Aquí puedes poner información sobre ti.</p>
       </section>
