--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <div class="header__interior">
         <div class="header__logo">
           <a href="/">
-            <img src="img/logo.png" alt="Logo del Hospital" id="logo" />
+            <img src="assets/img/logo.png" alt="Logo del Hospital" id="logo" />
             <h1>Hospital del Corazón</h1></a
           >
         </div>
         <nav class="navegacion">
           <ul class="navegacion__enlaces">
-            <li><a href="#inicio">Home</a></li>
-            <li><a href="#sobre-mi">Equipo Médico</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="pages/equipo-medico.html">Equipo Médico</a></li>
+            <li><a href="pages/contacto.html">Contacto</a></li>
           </ul>
         </nav>
 
