--- a/pages/equipo-medico.html
+++ b/pages/equipo-medico.html
@@ -10,27 +10,23 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <title>Equipo Médico</title>
   </head>
   <body>
-    <header id="header">
-      <div class="header-interior">
-        <a href="/"
-          ><img
-            src="../assets/img/logo.png"
-            alt="Logo del Hospital"
-            id="logo"
-          />
-          <h1 class="titulo">Hospital del Corazón</h1></a
-        >
+    <header>
+      <div class="header__interior">
+        <div class="header__logo">
+          <a href="/">
+            <img src="assets/img/logo.png" alt="Logo del Hospital" id="logo" />
+            <h1>Hospital del Corazón</h1></a
+          >
+        </div>
         <nav class="navegacion">
-          <ul>
+          <ul class="navegacion__enlaces">
             <li><a href="/">Home</a></li>
-            <li>
-              <a href="/pages/equipo-medico.html">Nuestro Equipo Médico</a>
-            </li>
-            <li><a href="/pages/contacto.html">Contacto</a></li>
+            <li><a href="equipo-medico.html">Equipo Médico</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </nav>
 
