--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <nav class="navegacion">
           <ul class="navegacion__enlaces">
             <li><a href="/">Home</a></li>
-            <li><a href="pages/equipo-medico.html">Equipo Médico</a></li>
-            <li><a href="pages/contacto.html">Contacto</a></li>
+            <li><a href="equipo-medico.html">Nuestro Equipo Médico </a></li>
+            <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </nav>
 
