--- a/pages/equipo-medico.html
+++ b/pages/equipo-medico.html
@@ -25,7 +25,7 @@
         <nav class="navegacion">
           <ul class="navegacion__enlaces">
             <li><a href="/">Home</a></li>
-            <li><a href="equipo-medico.html">Equipo Médico</a></li>
+            <li><a href="equipo-medico.html">Nuestro Equipo Médico </a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </nav>
