--- a/index.html
+++ b/index.html
@@ -25,116 +25,141 @@
         <nav class="navegacion">
           <ul class="navegacion__enlaces">
             <li><a href="/">Home</a></li>
-            <li><a href="equipo-medico.html">Nuestro Equipo Médico </a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li>
+              <a href="/pages/equipo-medico.html">Nuestro Equipo Médico </a>
+            </li>
+            <li><a href="/pages/contacto.html">Contacto</a></li>
           </ul>
         </nav>
 
-        <button>Reservar cita</button>
+        <button class="button active">Reservar cita</button>
       </div>
     </header>
 
-    <main id="main">
-      <div class="bienvenida">
-        <article>
-          <h2>Bienvenida</h2>
-          <p>
-            ¡Bienvenidos al Hospital del Corazón! Nos enorgullece ser un centro
-            de excelencia en salud cardiovascular, dedicado a proporcionar
-            atención integral y de calidad. Nuestra misión es cuidar y mejorar
-            la salud de nuestros pacientes, ofreciendo tratamientos innovadores
-            y un enfoque humano. Visualizamos un futuro donde cada corazón
-            recibe la atención que merece, promoviendo bienestar y calidad de
-            vida. Gracias por elegirnos para acompañarte en tu camino hacia la
-            salud.
-          </p>
-        </article>
+    <main>
+      <div class="container">
+        <div class="container__bienvenida">
+          <article>
+            <h2>Bienvenida</h2>
+            <p>
+              ¡Bienvenidos al Hospital del Corazón! Nos enorgullece ser un
+              centro de excelencia en salud cardiovascular, dedicado a
+              proporcionar atención integral y de calidad. Nuestra misión es
+              cuidar y mejorar la salud de nuestros pacientes, ofreciendo
+              tratamientos innovadores y un enfoque humano. Visualizamos un
+              futuro donde cada corazón recibe la atención que merece,
+              promoviendo bienestar y calidad de vida. Gracias por elegirnos
+              para acompañarte en tu camino hacia la salud.
+            </p>
+          </article>
 
-        <aside>hola</aside>
+          <aside>hola</aside>
+        </div>
+
+        <section>
+          <h2>Sobre nuestro equipo</h2>
+          <p>Aquí puedes poner información sobre ti.</p>
+        </section>
+
+        <section>
+          <h2>Servicios Médicos del Hospital del Corazón</h2>
+
+          <div class="servicios">
+            <div class="servicios__infor">
+              <img
+                src="assets/img/servicios/cardiologia.png"
+                alt="Ícono de consulta"
+              />
+              <div class="servicios__detalles">
+                <h3>Consultas Cardiológicas</h3>
+                <p>
+                  Ofrecemos consultas especializadas con cardiólogos
+                  experimentados que evaluarán tu salud cardiovascular,
+                  realizarán diagnósticos precisos y diseñarán planes de
+                  tratamiento personalizados.
+                </p>
+              </div>
+            </div>
+
+            <div class="servicios__infor">
+              <img
+                src="assets/img/servicios/cardiologia.png"
+                alt="Ícono de consulta"
+              />
+              <div class="servicios__detalles">
+                <h3>Consultas Cardiológicas</h3>
+                <p>
+                  Ofrecemos consultas especializadas con cardiólogos
+                  experimentados que evaluarán tu salud cardiovascular,
+                  realizarán diagnósticos precisos y diseñarán planes de
+                  tratamiento personalizados.
+                </p>
+              </div>
+            </div>
+
+            <div class="servicios__infor">
+              <img
+                src="assets/img/servicios/cardiologia.png"
+                alt="Ícono de consulta"
+              />
+              <div class="servicios__detalles">
+                <h3>Consultas Cardiológicas</h3>
+                <p>
+                  Ofrecemos consultas especializadas con cardiólogos
+                  experimentados que evaluarán tu salud cardiovascular,
+                  realizarán diagnósticos precisos y diseñarán planes de
+                  tratamiento personalizados.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section id="testimonios">
+          <h2>Testimonios de Pacientes</h2>
+
+          <div class="testimonios">
+            <p><strong>María G.</strong></p>
+            <p>
+              "La atención en el Hospital del Corazón fue excepcional. Desde mi
+              primera consulta hasta la rehabilitación, me sentí apoyada en cada
+              paso. Gracias a su equipo, hoy disfruto de una vida más
+              saludable."
+            </p>
+          </div>
+
+          <div class="testimonios">
+            <p><strong>José L.</strong></p>
+            <p>
+              "No puedo agradecer lo suficiente al personal del hospital. Su
+              profesionalismo y dedicación me dieron la confianza que necesitaba
+              durante mi tratamiento. Me siento como nuevo y listo para seguir
+              adelante."
+            </p>
+          </div>
+
+          <div class="testimonios">
+            <p><strong>Ana R.</strong></p>
+            <p>
+              "El Hospital del Corazón superó mis expectativas. La atención
+              personalizada y el seguimiento constante hicieron toda la
+              diferencia en mi recuperación. ¡Altamente recomendado!"
+            </p>
+          </div>
+
+          <div class="testimonios">
+            <p><strong>Carlos T.</strong></p>
+            <p>
+              "Tuve una experiencia increíble. El equipo médico no solo es
+              competente, sino también muy empático. Me ayudaron a entender mi
+              condición y a tomar decisiones informadas sobre mi salud."
+            </p>
+          </div>
+        </section>
       </div>
-
-      <section>
-        <h2>Sobre nuestro equipo</h2>
-        <p>Aquí puedes poner información sobre ti.</p>
-      </section>
-
-      <section>
-        <h2>Servicios Médicos del Hospital del Corazón</h2>
-
-        <div class="servicios">
-          <img src="URL_DEL_ICONO" alt="Ícono de consulta" />
-          <h3>Consultas Cardiológicas</h3>
-          <p>
-            Ofrecemos consultas especializadas con cardiólogos experimentados
-            que evaluarán tu salud cardiovascular, realizarán diagnósticos
-            precisos y diseñarán planes de tratamiento personalizados.
-          </p>
-        </div>
-
-        <div class="servicios">
-          <img src="URL_DEL_ICONO" alt="Ícono de urgencias" />
-          <h3>Urgencias Cardiovasculares</h3>
-          <p>
-            Nuestro servicio de urgencias está disponible las 24 horas,
-            brindando atención inmediata y de alta calidad para situaciones
-            críticas relacionadas con la salud del corazón.
-          </p>
-        </div>
-
-        <div class="servicios">
-          <img src="URL_DEL_ICONO" alt="Ícono de especialidades" />
-          <h3>Especialidades en Cardiología</h3>
-          <p>
-            Contamos con diversas especialidades, incluyendo
-            electrocardiografía, ecocardiografía y rehabilitación cardíaca, para
-            abordar de manera integral las necesidades de cada paciente.
-          </p>
-        </div>
-      </section>
-
-      <section id="testimonios">
-        <h2>Testimonios de Pacientes</h2>
-
-        <div class="testimonios">
-          <p><strong>María G.</strong></p>
-          <p>
-            "La atención en el Hospital del Corazón fue excepcional. Desde mi
-            primera consulta hasta la rehabilitación, me sentí apoyada en cada
-            paso. Gracias a su equipo, hoy disfruto de una vida más saludable."
-          </p>
-        </div>
-
-        <div class="testimonios">
-          <p><strong>José L.</strong></p>
-          <p>
-            "No puedo agradecer lo suficiente al personal del hospital. Su
-            profesionalismo y dedicación me dieron la confianza que necesitaba
-            durante mi tratamiento. Me siento como nuevo y listo para seguir
-            adelante."
-          </p>
-        </div>
-
-        <div class="testimonios">
-          <p><strong>Ana R.</strong></p>
-          <p>
-            "El Hospital del Corazón superó mis expectativas. La atención
-            personalizada y el seguimiento constante hicieron toda la diferencia
-            en mi recuperación. ¡Altamente recomendado!"
-          </p>
-        </div>
-
-        <div class="testimonios">
-          <p><strong>Carlos T.</strong></p>
-          <p>
-            "Tuve una experiencia increíble. El equipo médico no solo es
-            competente, sino también muy empático. Me ayudaron a entender mi
-            condición y a tomar decisiones informadas sobre mi salud."
-          </p>
-        </div>
-      </section>
     </main>
 
-    <footer>
+    <footer class="container">
       <p>&copy; 2024 Tu Nombre. Todos los derechos reservados.</p>
     </footer>
   </body>
