--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
       <div class="header__interior">
         <div class="header__logo">
           <a href="/">
-            <img src="assets/img/logo.png" alt="Logo del Hospital" id="logo" />
+            <img src="../assets/img/logo.png" alt="Logo del Hospital" id="logo" />
             <h1>Hospital del Corazón</h1></a
           >
         </div>
@@ -30,7 +30,7 @@
           </ul>
         </nav>
 
-        <button>Reservar cita</button>
+        <button class="button active">Reservar cita</button>
       </div>
     </header>
 
