Cambios nuevos y diseño responsivo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
@@ -53,7 +53,12 @@
             </p>
           </article>
 
-          <aside>hola</aside>
+          <aside>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
+            doloribus accusantium voluptates velit blanditiis doloremque numquam
+            quis exercitationem porro libero recusandae illum optio consectetur
+            neque aliquid corporis praesentium tempore voluptatibus.
+          </aside>
         </div>
 
         <section>
@@ -159,8 +164,41 @@
       </div>
     </main>
 
-    <footer class="container">
-      <p>&copy; 2024 Tu Nombre. Todos los derechos reservados.</p>
+    <footer>
+      <div class="footer__content">
+        <h3>Hospital del Corazón</h3>
+        <div class="footer__logo">
+          <ul class="footer__enlaces">
+            <li>
+              <a href="pages/equipo-medico.html">Nuestro Equipo Médico</a>
+            </li>
+            <li><a href="pages/contacto.html">Contacto</a></li>
+          </ul>
+        </div>
+
+        <div class="footer__contact-info">
+          <h4>Contacto</h4>
+          <p>Teléfono: (123) 456-7890</p>
+          <p>Email: contacto@hospitalcorazon.com</p>
+          <p>Dirección: Calle Ejemplo 123, Ciudad, País</p>
+        </div>
+
+        <div class="footer__social-media">
+          <h4>Síguenos</h4>
+          <a href="https://www.facebook.com/hospitalcorazon" target="_blank"
+            >Facebook</a
+          >
+          <a href="https://www.twitter.com/hospitalcorazon" target="_blank"
+            >Twitter</a
+          >
+          <a href="https://www.instagram.com/hospitalcorazon" target="_blank"
+            >Instagram</a
+          >
+        </div>
+      </div>
+      <div class="footer__footer-bottom">
+        <p>&copy; 2024 Hospital del Corazón - Todos los derechos reservados.</p>
+      </div>
     </footer>
   </body>
 </html>
