--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Contacto</title>
   </head>
   <body>
@@ -18,7 +18,11 @@
       <div class="header__interior">
         <div class="header__logo">
           <a href="/">
-            <img src="../assets/img/logo.png" alt="Logo del Hospital" id="logo" />
+            <img
+              src="../assets/img/logo.png"
+              alt="Logo del Hospital"
+              id="logo"
+            />
             <h1>Hospital del Corazón</h1></a
           >
         </div>
@@ -34,60 +38,63 @@
       </div>
     </header>
 
-    <div id="contacto">
-      <div class="container">
-        <div class="title">
-          <h1>Contacto</h1>
-        </div>
+    <div class="container">
+      <div class="title">
+        <h1>Contacto</h1>
+      </div>
 
-        <div class="infor">
-          <form>
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" required />
+      <div class="infor">
+        <form>
+          <label for="nombre">Nombre:</label>
+          <input type="text" id="nombre" name="nombre" required />
 
-            <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" required />
+          <label for="email">Correo Electrónico:</label>
+          <input type="email" id="email" name="email" required />
 
-            <label for="asunto">Asunto:</label>
-            <input type="text" id="asunto" name="asunto" required />
+          <label for="asunto">Asunto:</label>
+          <input type="text" id="asunto" name="asunto" required />
 
-            <label for="mensaje">Mensaje:</label>
-            <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+          <label for="mensaje">Mensaje:</label>
+          <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
 
-            <button type="submit">Enviar</button>
-          </form>
+          <button type="submit" class="btn-submit">Enviar</button>
+        </form>
 
-          <div id="map">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13300.944451875108!2d-70.77576473241136!3d-33.54724119005414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662dd01c5f41133%3A0xfe5c069201f1b2fb!2sEl%20Abrazo%2C%209280396%20Maip%C3%BA%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1729646917734!5m2!1ses-419!2scl"
-              width="600"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
+        <div class="mapa">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13300.944451875108!2d-70.77576473241136!3d-33.54724119005414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662dd01c5f41133%3A0xfe5c069201f1b2fb!2sEl%20Abrazo%2C%209280396%20Maip%C3%BA%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1729646917734!5m2!1ses-419!2scl"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
       </div>
     </div>
 
-    <footer id="footer">
-      <div class="footer-content">
+    <footer>
+      <div class="footer__content">
         <h3>Hospital del Corazón</h3>
-        <ul class="enlaces">
-          <li><a href="pages/equipo-medico.html">Nuestro Equipo Médico</a></li>
-          <li><a href="pages/contacto.html">Contacto</a></li>
-        </ul>
+        <div class="footer__logo">
+          
+          <ul class="footer__enlaces">
+            <li>
+              <a href="pages/equipo-medico.html">Nuestro Equipo Médico</a>
+            </li>
+            <li><a href="pages/contacto.html">Contacto</a></li>
+          </ul>
+        </div>
 
-        <div class="contact-info">
+        <div class="footer__contact-info">
           <h4>Contacto</h4>
           <p>Teléfono: (123) 456-7890</p>
           <p>Email: contacto@hospitalcorazon.com</p>
           <p>Dirección: Calle Ejemplo 123, Ciudad, País</p>
         </div>
 
-        <div class="social-media">
+        <div class="footer__social-media">
           <h4>Síguenos</h4>
           <a href="https://www.facebook.com/hospitalcorazon" target="_blank"
             >Facebook</a
@@ -99,11 +106,9 @@
             >Instagram</a
           >
         </div>
-        <div class="footer-bottom">
-          <p>
-            &copy; 2024 Hospital del Corazón - Todos los derechos reservados.
-          </p>
-        </div>
+      </div>
+      <div class="footer__footer-bottom">
+        <p>&copy; 2024 Hospital del Corazón - Todos los derechos reservados.</p>
       </div>
     </footer>
   </body>
