--- a/index.html
+++ b/index.html
@@ -11,17 +11,23 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <div class="header__interior">
         <div class="header__logo">
-          <a href="/">
-            <img src="assets/img/logo.png" alt="Logo del Hospital" id="logo" />
-            <h1>Hospital del Corazón</h1></a
+          <a href="/" class="header__home">
+            <img
+              src="assets/img/logo.png"
+              alt="Logo del Hospital"
+              id="logo"
+              class="header__logo"
+            />
+            <h1 class="header__titulo">Hospital del Corazón</h1></a
           >
         </div>
+
         <nav class="navegacion">
           <ul class="navegacion__enlaces">
             <li><a href="/">Home</a></li>
@@ -38,11 +44,11 @@
 
     <main>
       <div class="container">
-        <div class="container__bienvenida">
-          <article>
-            <h2>Bienvenida</h2>
+        <div class="bienvenida">
+          <article class="bienvenida__encabezado">
+            <h2 class="bienvenida__titulo">¡Bienvenidos al Hospital del Corazón! </h2>
             <p>
-              ¡Bienvenidos al Hospital del Corazón! Nos enorgullece ser un
+               Nos enorgullece ser un
               centro de excelencia en salud cardiovascular, dedicado a
               proporcionar atención integral y de calidad. Nuestra misión es
               cuidar y mejorar la salud de nuestros pacientes, ofreciendo
@@ -53,7 +59,7 @@
             </p>
           </article>
 
-          <aside>
+          <aside class="bienvenida__aside">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae,
             doloribus accusantium voluptates velit blanditiis doloremque numquam
             quis exercitationem porro libero recusandae illum optio consectetur
@@ -61,13 +67,19 @@
           </aside>
         </div>
 
-        <section>
-          <h2>Sobre nuestro equipo</h2>
-          <p>Aquí puedes poner información sobre ti.</p>
+        <section class="nuestro-equipo">
+          <h2 class="nuestro-equipo__titulo">Sobre nuestro equipo</h2>
+          <p class="nuestro-equipo__infor">
+            En el Hospital del Corazón, contamos con un equipo de profesionales
+            altamente capacitados y dedicados a brindar la mejor atención médica
+            a nuestros pacientes. Nuestro personal está compuesto por médicos,
+            enfermeras y especialistas que trabajan en conjunto para garantizar
+            un enfoque integral en la salud.
+          </p>
         </section>
 
         <section>
-          <h2>Servicios Médicos del Hospital del Corazón</h2>
+          <h2 class="servicios__titulo">Servicios Médicos del Hospital del Corazón</h2>
 
           <div class="servicios">
             <div class="servicios__infor">
@@ -119,11 +131,9 @@
             </div>
           </div>
         </section>
-
-        <section id="testimonios">
-          <h2>Testimonios de Pacientes</h2>
-
-          <div class="testimonios">
+        <h2 class="testimonios__titulo">Testimonios de Pacientes</h2>
+        <section class="testimonios">
+          <div class="testimonios__infor">
             <p><strong>María G.</strong></p>
             <p>
               "La atención en el Hospital del Corazón fue excepcional. Desde mi
@@ -133,7 +143,7 @@
             </p>
           </div>
 
-          <div class="testimonios">
+          <div class="testimonios__infor">
             <p><strong>José L.</strong></p>
             <p>
               "No puedo agradecer lo suficiente al personal del hospital. Su
@@ -143,7 +153,7 @@
             </p>
           </div>
 
-          <div class="testimonios">
+          <div class="testimonios__infor">
             <p><strong>Ana R.</strong></p>
             <p>
               "El Hospital del Corazón superó mis expectativas. La atención
@@ -152,7 +162,7 @@
             </p>
           </div>
 
-          <div class="testimonios">
+          <div class="testimonios__infor">
             <p><strong>Carlos T.</strong></p>
             <p>
               "Tuve una experiencia increíble. El equipo médico no solo es
