--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </ul>
         </nav>
 
-        <button class="button active btn">Reservar cita</button>
+        <button class="btn btn-primary active">Reservar cita</button>
       </div>
     </header>
 
@@ -135,12 +135,12 @@
       </section>
 
       <!-- TESTIMONIOS -->
-      <section class="testimonios">
+      <section class="container testimonios">
         <h2 class="testimonios__titulo text-center mb-4">
           Testimonios de Pacientes
         </h2>
-        <div class="row">
-          <div class="col-lg-3 col-12 mb-4">
+        <div class="row g-3">
+          <div class="col-md-3 col-12">
             <div class="testimonios__infor p-3 border rounded bg-light">
               <p><strong>María G.</strong></p>
               <p>
@@ -152,7 +152,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-12 mb-4">
+          <div class="col-md-3 col-12">
             <div class="testimonios__infor p-3 border rounded bg-light">
               <p><strong>José L.</strong></p>
               <p>
@@ -164,7 +164,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-12 mb-4">
+          <div class="col-md-3 col-12">
             <div class="testimonios__infor p-3 border rounded bg-light">
               <p><strong>Ana R.</strong></p>
               <p>
@@ -175,7 +175,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-12 mb-4">
+          <div class="col-md-3 col-12">
             <div class="testimonios__infor p-3 border rounded bg-light">
               <p><strong>Carlos T.</strong></p>
               <p>
