ajustes links footer

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Contacto</title>
   </head>
   <body>
@@ -94,9 +94,9 @@
           <div class="footer__logo">
             <ul class="footer__enlaces list-unstyled">
               <li>
-                <a href="pages/equipo-medico.html">Nuestro Equipo Médico</a>
+                <a href="equipo-medico.html">Nuestro Equipo Médico</a>
               </li>
-              <li><a href="pages/contacto.html">Contacto</a></li>
+              <li><a href="contacto.html">Contacto</a></li>
             </ul>
           </div>
         </div>
