--- a/pages/equipo-medico.html
+++ b/pages/equipo-medico.html
@@ -132,9 +132,9 @@
           <div class="footer__logo">
             <ul class="footer__enlaces list-unstyled">
               <li>
-                <a href="pages/equipo-medico.html">Nuestro Equipo Médico</a>
+                <a href="equipo-medico.html">Nuestro Equipo Médico</a>
               </li>
-              <li><a href="pages/contacto.html">Contacto</a></li>
+              <li><a href="contacto.html">Contacto</a></li>
             </ul>
           </div>
         </div>
