cambios nuevos - ejercicio 3

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -33,7 +33,7 @@
             <li>
               <a href="/pages/equipo-medico.html">Nuestro Equipo Médico</a>
             </li>
-            <li><a href="/pages/contacto.html">Contacto</a></li>
+            <li><a href="/pages/contacto.html" class="active">Contacto</a></li>
           </ul>
         </nav>
 
