--- a/pages/equipo-medico.html
+++ b/pages/equipo-medico.html
@@ -31,7 +31,7 @@
           <ul class="navegacion__enlaces">
             <li><a href="/">Home</a></li>
             <li>
-              <a href="/pages/equipo-medico.html">Nuestro Equipo Médico</a>
+              <a href="/pages/equipo-medico.html" class="active">Nuestro Equipo Médico</a>
             </li>
             <li><a href="/pages/contacto.html">Contacto</a></li>
           </ul>
@@ -42,7 +42,8 @@
     </header>
 
     <div class="container">
-      <h1>Equipo Médico</h1>
+      <div class="equipo-medico">
+        <h1>Equipo Médico</h1>
         <section>
           <p>
             El Hospital del Corazón se compromete a ofrecer atención médica de
@@ -52,7 +53,9 @@
             vanguardia y un enfoque integral en la salud cardiovascular.
           </p>
         </section>
-      <div class="row g-2 g-lg-3 equipo">
+      </div>
+     
+      <div class="row g-2 equipo">
         
         <div class="col-12 col-md-6 equipo__card">
           <img
