--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <nav class="navegacion">
           <ul class="navegacion__enlaces">
-            <li><a href="/">Home</a></li>
+            <li><a href="/" class="active">Home</a></li>
             <li>
               <a href="/pages/equipo-medico.html">Nuestro Equipo Médico</a>
             </li>
@@ -140,7 +140,7 @@
           Testimonios de Pacientes
         </h2>
         <div class="row g-3">
-          <div class="col-md-3 col-12">
+          <div class="col-md-6 col-lg-3 col-12">
             <div class="testimonios__infor p-3 border rounded bg-light">
               <p><strong>María G.</strong></p>
               <p>
@@ -152,7 +152,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 col-12">
+          <div class="col-md-6 col-lg-3 col-12">
             <div class="testimonios__infor p-3 border rounded bg-light">
               <p><strong>José L.</strong></p>
               <p>
@@ -164,7 +164,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 col-12">
+          <div class="col-md-6 col-lg-3 col-12">
             <div class="testimonios__infor p-3 border rounded bg-light">
               <p><strong>Ana R.</strong></p>
               <p>
@@ -175,7 +175,7 @@
             </div>
           </div>
 
-          <div class="col-md-3 col-12">
+          <div class="col-md-6 col-lg-3 col-12">
             <div class="testimonios__infor p-3 border rounded bg-light">
               <p><strong>Carlos T.</strong></p>
               <p>
