--- a/pages/equipo-medico.html
+++ b/pages/equipo-medico.html
@@ -31,9 +31,9 @@
           <ul class="navegacion__enlaces">
             <li><a href="/">Home</a></li>
             <li>
-              <a href="/pages/equipo-medico.html" class="active">Nuestro Equipo Médico</a>
+              <a href="./equipo-medico.html">Nuestro Equipo Médico</a>
             </li>
-            <li><a href="/pages/contacto.html">Contacto</a></li>
+            <li><a href="./contacto.html" class="active">Contacto</a></li>
           </ul>
         </nav>
 
@@ -54,9 +54,8 @@
           </p>
         </section>
       </div>
-     
+
       <div class="row g-2 equipo">
-        
         <div class="col-12 col-md-6 equipo__card">
           <img
             src="../assets/img/equipo-medico/equipo-1.jpg"
@@ -126,48 +125,48 @@
           </div>
         </div>
       </div>
-    </div>
 
-    <footer class="container">
-      <div class="row footer__content">
-        <div class="col-md-4">
-          <h3>Hospital del Corazón</h3>
-          <div class="footer__logo">
-            <ul class="footer__enlaces list-unstyled">
-              <li>
-                <a href="equipo-medico.html">Nuestro Equipo Médico</a>
-              </li>
-              <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+      <footer>
+        <div class="row footer__content">
+          <div class="col-md-4">
+            <h3>Hospital del Corazón</h3>
+            <div class="footer__logo">
+              <ul class="footer__enlaces list-unstyled">
+                <li>
+                  <a href="./equipo-medico.html">Nuestro Equipo Médico</a>
+                </li>
+                <li><a href="./contacto.html">Contacto</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-md-4 footer__contact-info">
+            <h4>Contacto</h4>
+            <p>Teléfono: (123) 456-7890</p>
+            <p>Email: contacto@hospitalcorazon.com</p>
+            <p>Dirección: Calle Ejemplo 123, Ciudad, País</p>
+          </div>
+
+          <div class="col-md-4 footer__social-media">
+            <h4>Síguenos</h4>
+            <a href="https://www.facebook.com/hospitalcorazon" target="_blank"
+              >Facebook</a
+            ><br />
+            <a href="https://www.twitter.com/hospitalcorazon" target="_blank"
+              >Twitter</a
+            ><br />
+            <a href="https://www.instagram.com/hospitalcorazon" target="_blank"
+              >Instagram</a
+            >
           </div>
         </div>
 
-        <div class="col-md-4 footer__contact-info">
-          <h4>Contacto</h4>
-          <p>Teléfono: (123) 456-7890</p>
-          <p>Email: contacto@hospitalcorazon.com</p>
-          <p>Dirección: Calle Ejemplo 123, Ciudad, País</p>
+        <div class="footer__footer-bottom text-center mt-4">
+          <p>
+            &copy; 2024 Hospital del Corazón - Todos los derechos reservados.
+          </p>
         </div>
-
-        <div class="col-md-4 footer__social-media">
-          <h4>Síguenos</h4>
-          <a href="https://www.facebook.com/hospitalcorazon" target="_blank"
-            >Facebook</a
-          ><br />
-          <a href="https://www.twitter.com/hospitalcorazon" target="_blank"
-            >Twitter</a
-          ><br />
-          <a href="https://www.instagram.com/hospitalcorazon" target="_blank"
-            >Instagram</a
-          >
-        </div>
-      </div>
-
-      <div class="footer__footer-bottom text-center mt-4">
-        <p>
-          &copy; 2024 Hospital del Corazón - Todos los derechos reservados.
-        </p>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
