--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <ul class="navegacion__enlaces">
             <li><a href="/" class="active">Home</a></li>
             <li>
-              <a href="/pages/equipo-medico.html">Nuestro Equipo Médico</a>
+              <a href="./pages/equipo-medico.html">Nuestro Equipo Médico</a>
             </li>
-            <li><a href="/pages/contacto.html">Contacto</a></li>
+            <li><a href="./pages/contacto.html">Contacto</a></li>
           </ul>
         </nav>
 
@@ -196,9 +196,9 @@
             <div class="footer__logo">
               <ul class="footer__enlaces list-unstyled">
                 <li>
-                  <a href="pages/equipo-medico.html">Nuestro Equipo Médico</a>
+                  <a href="./pages/equipo-medico.html">Nuestro Equipo Médico</a>
                 </li>
-                <li><a href="pages/contacto.html">Contacto</a></li>
+                <li><a href="./pages/contacto.html">Contacto</a></li>
               </ul>
             </div>
           </div>
