--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,7 +23,7 @@
               id="logo"
               class="header__logo"
             />
-            <h1 class="lg:fs-1 header__titulo">Hospital del Corazón</h1>
+            <h1 class="header__titulo">Hospital del Corazón</h1>
           </a>
         </div>
 
