ajustes al readme.md y lab 2 terminado

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,7 +47,7 @@
       </div>
 
       <div class="infor">
-        <form class="mt-4">
+        <form class="mt-4" id="form-contacto">
           <div class="mb-3">
             <label for="nombre" class="form-label">Nombre:</label>
             <input
@@ -107,6 +107,8 @@
           ></iframe>
         </div>
       </div>
+
+      <div id="mensaje-confirmacion"></div>
 
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
@@ -265,6 +267,8 @@
         </div>
       </footer>
     </div>
+    <!-- JS -->
+    <script src="contacto.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
