--- a/index.html
+++ b/index.html
@@ -53,10 +53,14 @@
     <main class="container">
       <section class="bienvenida row">
         <div class="col-md-7">
-          <article class="bienvenida__encabezado">
+          <div class="hr">
             <h2 class="bienvenida__titulo">
-              ¡Bienvenidos al Hospital del Corazón!
+              ¡Bienvenidos al Hospital <br> del Corazón!
             </h2>
+            <div class="line"></div>
+          </div>
+          <article class="bienvenida__encabezado">
+           
             <p>
               Nos enorgullece ser un centro de excelencia en salud
               cardiovascular, dedicado a proporcionar atención integral y de
@@ -78,7 +82,11 @@
       </section>
 
       <section class="nuestro-equipo">
-        <h2 class="nuestro-equipo__titulo">Sobre nuestro equipo</h2>
+        <div class="hr">
+          <h2 class="nuestro-equipo__titulo">Sobre nuestro equipo</h2>
+          <div class="line"></div>
+        </div>
+       
         <p class="nuestro-equipo__infor">
           En el Hospital del Corazón, contamos con un equipo de profesionales
           altamente capacitados y dedicados a brindar la mejor atención médica a
@@ -90,9 +98,13 @@
 
       <!-- SERVICIOS -->
       <section id="servicios" class="servicios">
-        <h2 class="servicios__titulo">
-          Servicios Médicos del Hospital del Corazón
-        </h2>
+        <div class="hr">
+          <h2 class="servicios__titulo">
+            Servicios Médicos del <br />
+            Hospital del Corazón
+          </h2>
+          <div class="line"></div>
+        </div>
 
         <div class="row">
           <div class="servicios__infor col-12 col-md-6">
