--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -38,6 +38,15 @@
         </nav>
 
         <button class="btn btn-outline-primary me-2">Reservar cita</button>
+         <!-- Bootstrap 5 switch -->
+         <div class="form-check form-switch">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            id="darkModeSwitch"
+            checked
+          />
+        </div>
       </div>
     </header>
 
@@ -269,6 +278,7 @@
     </div>
     <!-- JS -->
     <script src="contacto.js"></script>
+    <script src="../app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
