--- a/pages/equipo-medico.html
+++ b/pages/equipo-medico.html
@@ -36,8 +36,16 @@
             <li><a href="./contacto.html" class="active">Contacto</a></li>
           </ul>
         </nav>
-
         <button class="btn btn-outline-primary me-2">Reservar cita</button>
+         <!-- Bootstrap 5 switch -->
+         <div class="form-check form-switch">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            id="darkModeSwitch"
+            checked
+          />
+        </div>
       </div>
     </header>
 
@@ -172,6 +180,7 @@
 
 
     <script src="doctores.js"></script>
+    <script src="../app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
